--- a/components/accordion.css
+++ b/components/accordion.css
@@ -1,41 +1,69 @@
 /* Стилизация аккордеона */
-.accordion{
-    font-family: Inter, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 24px;
-    margin-top: 10px;
+.accordion {
+  max-width: 45.625rem;
+}
+.accordion__accordion-item {
+  margin-bottom: 0.5em;
+  border: 1px solid var(--border);
+  box-sizing: border-box;
+  border-radius: 8px;
+  font-family: Inter;
+  line-height: 1.5;
+  font-weight: normal;    
+  padding: 1.5em 2em;    
+}
+.accordion__accordion-item:last-child {
+  margin-bottom: 0px;
+}
+.accordion__accordion-item[open] .accordion__icon {
+  transform: rotate(180deg);
+}
+.accordion__summary {    
+  color: var(--text-main);
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+}
+.accordion__summary::-webkit-details-marker {
+  display: none;
+}
+.accordion__text-summary {
+  margin: 0;
+}
+.accordion__text-details {
+  color: var(--text-details);
+  margin: 1em 0 0 0;
+  padding: 0 1.0625em 0.5em 0;    
+}
+.accordion__icon {
+  width: 1.625rem;
+  height: 1.625rem;
+  cursor: pointer;    
+}
+
+.accordion_preview100 {
+  width: 100%;
+}
+
+.accordion_preview {
+  font-size: 0.45rem;
+  pointer-events: none;
+}
+.accordion_preview .accordion__icon {
+  transform: scale(0.66666);
+}
+.accordion_preview .accordion__accordion-item[open] .accordion__icon {
+  transform: scale(0.66666) rotate(180deg);
+}
+@media screen and (min-width: 768px) {
+  .accordion_preview {
+      font-size: 0.8rem;
+  }
+  .accordion_preview .accordion__icon {
+      transform: scale(1);
   }
   
-.accordion__item{
-    background: var(--white);
-    border: 1px solid var(--grey-3);
-    border-radius: 8px;
-    min-height: 72px;
-    margin-bottom: 8px;
-    padding-left: 32px;
-    padding-right: 32px; 
+  .accordion_preview .accordion__accordion-item[open] .accordion__icon {
+      transform: scale(1) rotate(180deg);
+  }
 }
-
-.accordion__summary{
-    display: flex;
-    outline: none;
-    padding-top: 24px;
-    padding-bottom: 24px;
-    color: var(--black);
-}
-
-.accordion__text{
-    padding-bottom: 32px;
-    color: var( --grey-4);
-}
-
-.accordion__item:last-child{
-    margin-bottom: 0px;
-}
-
-.accordion__summary::-webkit-details-marker {
-    display: none;
-}
-  
