--- a/components/components.css
+++ b/components/components.css
@@ -1,71 +1,134 @@
 .components {
-    font-family: 'Inter', sans-serif;
-    font-style: normal;
-    display: grid;
-    gap: 56px;
-    grid-template-columns: 20.6% 1fr;
-    padding-top: 36px;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  padding-top: 36px;
+  background-color: var(--grey-6);
+}
+@media (max-width: 600px) {
+  .components {
+    background-color: var(--white);
+    padding-top: 0;
   }
-  
-.components__nav-name {
-    font-weight: normal;
+}
+@media (max-width: 600px) {
+  .components__container {
+    padding: 0;
+  }
+}
+.components__inner {
+  display: grid;
+  gap: 56px;
+  grid-template-columns: 20.6% 1fr;
+}
+@media (max-width: 600px) {
+  .components__inner {
+    grid-template-columns: 1fr;
+  }
+}
+.components__block {
+  min-height: 700px;
+  padding: 28px 0;
+  background-color: var(--white);
+  box-shadow: 0px 2px 4px var(--box-shadow);
+  border-radius: 12px;
+  overflow: hidden;
+}
+@media (max-width: 600px) {
+  .components__block {
+    padding: 32px 0 0 0;
+    box-shadow: none;
+    border-radius: 0;
+  }
+}
+.components__title {
+  font-weight: normal;
+  font-size: 28px;
+  line-height: 38px;
+  color: var(--grey-4);
+  margin: 0 0 24px 0;
+  padding: 0 32px;
+}
+@media (max-width: 600px) {
+  .components__title {
     font-size: 20px;
     line-height: 26px;
-    color: var(--black);
-    margin-bottom: 16px;
+    padding: 0 16px;
   }
-  
-.components__list {
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 22px;
-    color: var(--black);
-  }
-  
-.components__item:last-child {
-    margin-top: 32px;
-  }
-  
-.components__link--active {
-    color: var(--red);
-  }
-  
-.components__block {
-    min-height: 700px;
-    padding: 28px 32px;
-    background-color: var(--white);
-    box-shadow: 0px 2px 4px var(--box-shadow);
-    border-radius: 12px;
-  }
-  
-.components__name {
-    font-weight: normal;
-    font-size: 28px;
-    line-height: 38px;
-    color: var(--grey-4);
-    margin-bottom: 24px;
-  }
-  
+}
+.components__element {
+  margin: 0 0 64px 0;
+  padding: 0 32px;
+}
 
-.components__footer {
-    padding: 56px 0;
-    background-color: var(--grey-6);
+.components__element--tooltip {
+  margin: 64px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (max-width: 600px) {
+  .components__element {
+    padding: 0 16px;
   }
-  
-.components__footer-title {
-    font-family: 'Inter', sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 18px;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-    color: var(--grey-3); 
-    text-align: center;
-  } 
+}
 
-.components__header {
-    background-color: var(--white);
-    min-height: 82px;
-  } 
 
+.components__form-toggler {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
+  column-gap: 8px;
+  row-gap: 24px;
+  margin-bottom: 24px;
+}
+
+.components__form-inner {
+  display: grid;
+  row-gap: 8px;
+}
+
+.components__input-field {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+  gap: 8px;
+}
+
+.components__button-text {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 18px;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: var(--grey-3);
+  margin-bottom: 24px;
+}
+
+.components__button-inner {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 16px;
+  margin-bottom: 16px;
+}
+
+
+.components .tabs__list::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  top: 100%;
+  left: 0;
+  background-color: var(--grey-2);
+}
+.components__code-example {
+  margin: 0;
+  padding: 0 32px;
+  overflow-x: auto;
+}
+@media (max-width: 600px) {
+  .components__code-example {
+    padding: 0 16px;
+  }
+}
