--- a/components/container/container.css
+++ b/components/container/container.css
@@ -1,4 +1,15 @@
 .container {
-    max-width: 1110px;
     margin: 0 auto;
+    height: 100%;
+    max-width: calc(10.25rem * 2 + 1rem);
+}
+
+.container_secondary {
+    max-width: none;
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        max-width: calc(21.875rem * 3 + 1.875rem * 2);
+    }
 }
