--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -1,32 +1,40 @@
 .footer {
-    height: 300px;
-    background: var(--white);
-    padding: 71px 0;
+  display: none;
 }
-.footer__title {
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 38px;
-    line-height: 48px;
-    color: var(--black);
-    margin: 0;
-    text-align: center;
-}
-.footer__text {
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 24px;
-    text-align: center;
-    color: var(--black);
-    width: 640px;
-    margin: 32px auto 0 auto;
-}
+@media screen and (min-width: 768px) {
+  .footer {
+      display: block;
+      font-family: Inter;
+      color: var(--text-main);
+      text-align: center;
+      padding: 2.4375em 0 8.5em 0;
+      border-top: 1px solid var(--main-border);          
+  }
+  
+  .footer__title {        
+      font-size: 2.375rem;
+      font-weight: 500;
+      line-height: 1.263;
+      margin: 0.842em 0 0.842em 0;
+  }
+  
+  .footer__text {
+      font-size: 1rem;
+      line-height: 1.5;   
+      margin: 0 14.6875em 0 14.6875em;
+  }
 
-@media only screen and (max-width: 768px) {
-    .footer {
-        display: none;
-    }
-} 
+  .footer_secondary {
+      padding: 1.25rem 0 3.5rem 0;
+      border-top: none;  
+  }
+
+  .footer__text_secondary {
+      font-weight: 500;
+      font-size: 0.75rem;
+      line-height: 1.5;
+      letter-spacing: 0.04em;
+      text-transform: uppercase;    
+      color: var(--text-footer);
+  }
+}
