--- a/components/header/header.css
+++ b/components/header/header.css
@@ -1,27 +1,52 @@
 .header {
-    padding: 96px 0 77px;
-    background: var(--white);
+  font-family: Inter;
+  font-size: 1.75rem;
+  padding: 1.0625rem 0 2rem 0;
+}
+.header__inner {
+  display: flex;
+  flex-direction: column;
 }
 .header__title {
-    font-family: Inter, sans-serif; 
-    font-style: normal;
-    font-weight: 500;
-    font-size: 50px;
-    line-height: 64px;
-    color: var(--black);
-    margin: 0;
+  font-size: inherit;
+  margin: 3rem 0 0 0;
+  font-weight: normal;
+  line-height: 1.357;
+  color: var(--text-details);    
+}
+.header_secondary {
+  padding: 1.0625rem 0 1.0625rem 0;
+  background-color: var(--main-bg-color);
+  position: relative;
+  z-index: 1;
 }
 
-@media only screen and (max-width: 768px) {
-    .header {
-        padding: 96px 16px 69px;
-    }
+.header__burger-button {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+}
+.header__burger-menu {
+  top: calc(2.125rem + 32px);
+  height: calc(100vh - 2.125rem - 32px);
+}
+@media screen and (min-width: 768px) {
+  .header {        
+      font-size: 3.125rem;
+      padding: 1.5625rem 0 2.5rem 0; 
+  }
+  .header__title {
+      font-weight: 500;        
+      line-height: 1.28;
+      color: var(--text-main);
+      margin-top: 2.5rem;
+  }   
 
-    .header__title {
-        font-weight: normal;
-        font-size: 28px;
-        line-height: 38px;
-        color: var(--grey-4);
-    }
+  .header_secondary {
+      padding: 1.5625rem 0 1.5625rem 0;
+ }    
 
-} 
+  .header__burger-button {
+      display: none;
+  }
+}
