--- a/components/menu/menu.css
+++ b/components/menu/menu.css
@@ -1,39 +1,77 @@
 .menu {
+    --text-select-color: #D84910;
+    --text-title-color: #000000;     
     display: flex;
     flex-direction: column;
-    width: 229px;
+    justify-content: start;
+    align-items: flex-start;
+    height: 100%;
+    overflow-y: auto;
 }
+
+.menu_page {
+    display: none;
+}
+
+.menu__block {
+    display: flex;
+    flex-direction: column;
+    padding: 1.5rem 0;
+    border-bottom: 1px solid var(--main-border);
+    width: 100%;
+}
+
 .menu__title {
-    font-family: Inter;
-    font-style: normal;
+    font-family: 'Inter';
+    font-size: 1.25rem;
+    line-height: 1.3;
     font-weight: normal;
-    font-size: 20px;
-    line-height: 26px;
-    color: #000000;
-}
-.menu__body {
-    margin-top: 16px;
+    margin: 0 0 1rem 0;
+    color: var(--text-footer);
 }
 .menu__item {
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 22px;
-    color: var(--black);
-    cursor: pointer;
-}
-.menu__item_selected {
-    color: #D84910;
-    cursor: default;
+    font-family: 'Inter';
+    font-size: 1rem;
+    line-height: 1.5;
+    color: var(--text-main);
+    margin-bottom: 1rem;
+    text-decoration: none;
 }
 
-.menu__footer {
-    margin-top: 30px;
+.menu__item:last-child {
+    margin-bottom: 0;
 }
 
-@media only screen and (max-width: 768px) {
-    .menu {
-        display: none;
+.menu__item_select {
+    color: var(--text-select-color);
+}
+
+.menu__item_main {
+    margin-top: 1.875rem;
+}
+
+@media screen and (min-width: 768px) {
+    .menu_page {   
+        width: 14.3125rem;
+        display: flex;
     }
-}
+
+    .menu__title {
+        color: var(--text-title-color);
+    }
+
+    .menu__block {
+        padding: 0 0 2rem 0;
+        border-bottom: none;
+    }
+
+    .menu__item {
+        font-size: 0.875rem;
+        line-height: 1.57;
+        margin-bottom: 0.25rem;
+    }
+
+    .menu__item_main { 
+        margin-top: 0;
+    }
+} 
